--- a/RestoranTablesService/RestaurantTablesService.csproj
+++ b/RestoranTablesService/RestaurantTablesService.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Reports\ClientChecks\" />
+    <Folder Include="Reports\CompanyChecks\" />
+  </ItemGroup>
+
 </Project>
