--- a/FrontEnd/FrontEnd.csproj
+++ b/FrontEnd/FrontEnd.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\RestoranTablesService\RestaurantTablesService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Reports\ClientChecks\" />
+    <Folder Include="Reports\CompanyChecks\" />
+  </ItemGroup>
+
 </Project>
